--- a/UserManagementClient/Views/Shared/_Layout.cshtml
+++ b/UserManagementClient/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -20,10 +21,10 @@
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
     <div class="wrapper">
         <!-- Main Sidebar Container -->
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <aside class="main-sidebar sidebar-dark-teal elevation-4">
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
-                <img src="~/images/UserManagementLogo.png" width="160" height="160" class="brand-image img-circle elevation-3"
+                <img src="~/images/UserManagementLogo.png" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
                 <span class="brand-text font-weight-light">User Management</span>
             </a>
@@ -35,14 +36,14 @@
                         <img src="~/images/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">@Context.Session.GetString("UserName")</a>
                     </div>
                 </div>
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                             with font-awesome or any other icon font library -->
+                        with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -53,26 +54,35 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="./index.html" class="nav-link">
+                                    <a href="/Departments/Index" class="nav-link">
                                         @*<i class="far fa-circle nav-icon"></i>*@
-                                        <p>Manage Application Data</p>
+                                        <p>Manage Department Data</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./index2.html" class="nav-link">
+                                    <a href="/Users/Index" class="nav-link">
                                         @*<i class="far fa-circle nav-icon"></i>*@
-                                        <p>Manage Batch Data </p>
+                                        <p>Manage User Data </p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./index3.html" class="nav-link">
+                                    <a href="/Roles/Index" class="nav-link">
                                         @*<i class="far fa-circle nav-icon"></i>*@
-                                        <p>Manage Degree Data</p>
+                                        <p>Manage Role Data</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        
+                    </ul>
+                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                        <!-- Add icons to the links using the .nav-icon class
+                        with font-awesome or any other icon font library -->
+                        <li class="nav-item">
+                            <a href="/Users/Logout" class="nav-link">
+                                <i class="fa fa-door-open nav-icon"></i>
+                                <p>Logout</p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
@@ -80,10 +90,9 @@
             <!-- /.sidebar -->
         </aside>
         <!-- Content Wrapper. Contains page content -->
-        
-            <!-- /.content-header -->
-            @RenderBody()
-            <!-- /.content -->
+        <!-- /.content-header -->
+        @RenderBody()
+        <!-- /.content -->
         <!-- /.content-wrapper -->
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
@@ -94,6 +103,13 @@
     </div>
     <!-- ./wrapper -->
     @RenderSection("Scripts", required: false)
-    
+    <script>
+        function Logout() {
+            $.ajax({
+                "url": "/Users/Logout",
+                "type": "GET"
+            });
+        }
+    </script>
 </body>
 </html>
